control/chameleon_zf90.F90

!!!
!
! @file chameleon_zf90.F90
!
!  CHAMELEON Fortran 90 interfaces using Fortran 2003 ISO C bindings
!  CHAMELEON is a software package provided by Univ. of Tennessee,
!  Univ. of California Berkeley and Univ. of Colorado Denver
!
! @copyright 2012-2025 Bordeaux INP, CNRS (LaBRI UMR 5800), Inria,
!                      Univ. Bordeaux. All rights reserved.
!
! @version 1.3.0
! @author Numerical Algorithm Group
! @author Mathieu Faverge
! @author Emmanuel Agullo
! @author Cedric Castagnede
! @author Florent Pruvost
! @date 2024-02-18
! @precisions normal z -> c d s
!
! -- Inria
! -- (C) Copyright 2012
!
! This software is a computer program whose purpose is to process
! Matrices Over Runtime Systems @ Exascale (MORSE). More information
! can be found on the following website: http://www.inria.fr/en/teams/morse.
!
! This software is governed by the CeCILL-B license under French law and
! abiding by the rules of distribution of free software.  You can  use,
! modify and/ or redistribute the software under the terms of the CeCILL-B
! license as circulated by CEA, CNRS and INRIA at the following URL
! "http://www.cecill.info".
!
! As a counterpart to the access to the source code and  rights to copy,
! modify and redistribute granted by the license, users are provided only
! with a limited warranty  and the software's author,  the holder of the
! economic rights,  and the successive licensors  have only  limited
! liability.
!
! In this respect, the user's attention is drawn to the risks associated
! with loading,  using,  modifying and/or developing or reproducing the
! software by the user in light of its specific status of free software,
! that may mean  that it is complicated to manipulate,  and  that  also
! therefore means  that it is reserved for developers  and  experienced
! professionals having in-depth computer knowledge. Users are therefore
! encouraged to load and test the software's suitability as regards their
! requirements in conditions enabling the security of their systems and/or
! data to be ensured and,  more generally, to use and operate it in the
! same conditions as regards security.
!
! The fact that you are presently reading this means that you have had
! knowledge of the CeCILL-B license and that you accept its terms.
!
!!!
!
!     Copyright © 2011 The Numerical Algorithms Group Ltd. All rights reserved.
!
!     Redistribution and use in source and binary forms, with or without
!     modification, are permitted provided that the following conditions are
!     met:
!     - Redistributions of source code must retain the above copyright notice,
!       this list of conditions, and the following disclaimer.
!     - Redistributions in binary form must reproduce the above copyright
!       notice, this list of conditions and the following disclaimer listed in
!       this license in the documentation and/or other materials provided with
!       the distribution.
!     - Neither the name of the copyright holders nor the names of its
!       contributors may be used to endorse or promote products derived from
!       this software without specific prior written permission.
!
!     This software is provided by the copyright holders and contributors "as
!     is" and any express or implied warranties, including, but not limited
!     to, the implied warranties of merchantability and fitness for a
!     particular purpose are disclaimed. in no event shall the copyright owner
!     or contributors be liable for any direct, indirect, incidental, special,
!     exemplary, or consequential damages (including, but not limited to,
!     procurement of substitute goods or services; loss of use, data, or
!     profits; or business interruption) however caused and on any theory of
!     liability, whether in contract, strict liability, or tort (including
!     negligence or otherwise) arising in any way out of the use of this
!     software, even if advised of the possibility of such damage.
!
!
#define PRECISION_z

module chameleon_z
  !+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
  !  FORTRAN API - math functions (simple interface)
  !
  interface
     function CHAMELEON_zLapack_to_Tile_c(Af77,LDA,A) &
          & bind(c, name='CHAMELEON_zLapack_to_Tile')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zLapack_to_Tile_c
       type(c_ptr), value :: Af77
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: A
     end function CHAMELEON_zLapack_to_Tile_c
  end interface

  interface
     function CHAMELEON_zTile_to_Lapack_c(A,Af77,LDA) &
          & bind(c, name='CHAMELEON_zTile_to_Lapack')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zTile_to_Lapack_c
       type(c_ptr), value :: A
       type(c_ptr), value :: Af77
       integer(kind=c_int), value :: LDA
     end function CHAMELEON_zTile_to_Lapack_c
  end interface

  interface
     function CHAMELEON_zgebrd_c(M,N,A,LDA,D,E,descT) &
          & bind(c, name='CHAMELEON_zgebrd')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgebrd_c
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: D
       type(c_ptr), value :: E
       type(c_ptr), value :: descT
     end function CHAMELEON_zgebrd_c
  end interface

  interface
     function CHAMELEON_zgecfi_c(m,n,A,fin,imb,inb,fout,omb,onb) &
          & bind(c, name='CHAMELEON_zgecfi')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgecfi_c
       integer(kind=c_int), value :: m
       integer(kind=c_int), value :: n
       type(c_ptr), value :: A
       integer(kind=c_int), value :: fin
       integer(kind=c_int), value :: imb
       integer(kind=c_int), value :: inb
       integer(kind=c_int), value :: fout
       integer(kind=c_int), value :: omb
       integer(kind=c_int), value :: onb
     end function CHAMELEON_zgecfi_c
  end interface

  interface
     function CHAMELEON_zgecfi_Async_c(m,n,A,f_in,imb,inb,f_out,omb,onb,sequence,request) &
          & bind(c, name='CHAMELEON_zgecfi_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgecfi_Async_c
       integer(kind=c_int), value :: m
       integer(kind=c_int), value :: n
       type(c_ptr), value :: A
       integer(kind=c_int), value :: f_in
       integer(kind=c_int), value :: imb
       integer(kind=c_int), value :: inb
       integer(kind=c_int), value :: f_out
       integer(kind=c_int), value :: omb
       integer(kind=c_int), value :: onb
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgecfi_Async_c
  end interface

  interface
     function CHAMELEON_zgelqf_c(M,N,A,LDA,descT) &
          & bind(c, name='CHAMELEON_zgelqf')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgelqf_c
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: descT
     end function CHAMELEON_zgelqf_c
  end interface

  interface
     function CHAMELEON_zgelqs_c(M,N,NRHS,A,LDA,descT,B,LDB) &
          & bind(c, name='CHAMELEON_zgelqs')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgelqs_c
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: descT
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zgelqs_c
  end interface

  interface
     function CHAMELEON_zgels_c(trans,M,N,NRHS,A,LDA,descT,B,LDB) &
          & bind(c, name='CHAMELEON_zgels')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgels_c
       integer(kind=c_int), value :: trans
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: descT
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zgels_c
  end interface

  interface
     function CHAMELEON_zgemm_c(transA,transB,M,N,K,alpha,A,LDA,B,LDB,beta,C,LDC) &
          & bind(c, name='CHAMELEON_zgemm')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgemm_c
       integer(kind=c_int), value :: transA
       integer(kind=c_int), value :: transB
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: K
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
       integer(kind=c_int), value :: LDC
     end function CHAMELEON_zgemm_c
  end interface

  interface
     function CHAMELEON_zgeqrf_c(M,N,A,LDA,descT) &
          & bind(c, name='CHAMELEON_zgeqrf')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgeqrf_c
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: descT
     end function CHAMELEON_zgeqrf_c
  end interface

  interface
     function CHAMELEON_zgeqrs_c(M,N,NRHS,A,LDA,descT,B,LDB) &
          & bind(c, name='CHAMELEON_zgeqrs')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgeqrs_c
       integer(kind=c_int), value :: M
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: descT
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zgeqrs_c
  end interface

  interface
     function CHAMELEON_zgesv_c(N,NRHS,A,LDA,IPIV,B,LDB) &
          & bind(c, name='CHAMELEON_zgesv')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgesv_c
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zgesv_c
  end interface

  interface
     function CHAMELEON_zgesv_incpiv_c(N,NRHS,A,LDA,descL,IPIV,B,LDB) &
          & bind(c, name='CHAMELEON_zgesv_incpiv')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgesv_incpiv_c
       integer(kind=c_int), value :: N
       integer(kind=c_int), value :: NRHS
       type(c_ptr), value :: A
       integer(kind=c_int), value :: LDA
       type(c_ptr), value :: descL
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
       integer(kind=c_int), value :: LDB
     end function CHAMELEON_zgesv_incpiv_c
  end interface
